Cleanup
* remove deprecations
* use java 17 features
* fix spotbugs issues